<resources>
    <string name="app_name">StudyDemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="jump_to_coordinator_layout">coordinator</string>
    <string name="jump_to_collapsing_toolbar_layout">collapsingToolbar</string>
    <string name="jump_to_constraint_layout">constraintLayout</string>
    <string name="jump_to_video_layout">Video</string>
    <string name="jump_to_video_download_layout">VideoDownload</string>
    <string name="jump_to_second_layout">Second</string>
    <string name="jump_to_code_layout">vericationCode</string>
    <string name="jump_to_code2_layout">vericationCode2</string>
    <string name="jump_to_edit_layout">软键盘弹出整体上移</string>
    <string name="jump_to_thread_layout">thread</string>
    <string name="jump_to_tween_layout">tween</string>
    <string name="jump_to_value_layout">属性动画</string>
    <string name="jump_to_path_layout">曲线动画</string>
    <string name="jump_to_frame_layout">帧动画</string>
    <string name="jump_to_activity_layout">activity切换</string>
    <string name="jump_to_four_layout">四种5.0以上转场动画</string>
    <string name="jump_to_vector_layout">矢量图动画</string>
    <string name="jump_to_code_vector_layout">代码构建矢量动画</string>
    <string name="jump_to_search_layout">trimPath demo</string>
    <string name="jump_to_video_rx_layout">rxffmpeg播放器</string>





</resources>
