<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/jump2_coordinator_layout_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_coordinator_layout" />

        <Button
            android:id="@+id/jump2_collapsing_toolbar_layout_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_collapsing_toolbar_layout" />
        <Button
            android:id="@+id/jump2_constraint_layout_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_constraint_layout" />
        <Button
            android:id="@+id/jump2_video_layout_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_video_layout" />
        <Button
            android:id="@+id/jump2_video_download_layout_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_video_download_layout" />
        <Button
            android:id="@+id/jump2_second_layout_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_second_layout" />
        <Button
            android:id="@+id/jump2_code_layout_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_code_layout" />
        <Button
            android:id="@+id/jump2_code2_layout_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_code2_layout" />
        <Button
            android:id="@+id/jump2_edit_text_layout_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_edit_layout" />
        <Button
            android:id="@+id/jump2_thread_layout_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_thread_layout" />
        <Button
            android:id="@+id/jump2_tween_layout_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_tween_layout" />
        <Button
            android:id="@+id/jump2_value_layout_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_value_layout" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>